objects/HRB_Refund_Advance__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_f9list_id__c</fullName>
        <label>Add to Five9 List ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoDecision__c</fullName>
        <label>AutoDecision</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Preferred_Phone__c</fullName>
        <label>Client Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CreatedAt__c</fullName>
        <label>CreatedAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Year_Tax_Refund_Amount__c</fullName>
        <label>Current Year Tax Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_And_Timestamp_Received__c</fullName>
        <label>Date And Timestamp Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Processed__c</fullName>
        <description>Date_Processed__c</description>
        <label>Date_Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DecisionBy__c</fullName>
        <label>DecisionBy</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_from_f9list_id__c</fullName>
        <label>Delete from Five9 List ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Status__c</fullName>
        <label>Filing Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9C2CCampaignName__c</fullName>
        <formula>&quot;OB HRB Agent&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9C2CCampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRBDecision__c</fullName>
        <label>HRBDecision</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_Phone_Number__c</fullName>
        <label>IRS Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IRS_Phone__c</fullName>
        <formula>&quot;8003043107&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IRS Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModDT__c</fullName>
        <formula>DATETIMEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ManualDecision__c</fullName>
        <label>ManualDecision</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUM_SCORE__c</fullName>
        <formula>VALUE(Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NUM_SCORE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_ANI__c</fullName>
        <label>Outbound ANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Processed_Date_Time__c</fullName>
        <label>Processed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Advance_Application_ID__c</fullName>
        <label>Refund Advance Application ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAHours__c</fullName>
        <formula>if(isCompleted__c, 
24*(NULLVALUE(LastModDT__c, Now())-CreatedAt__c), 
24*( Now()-CreatedAt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLAHours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAMinutes__c</fullName>
        <formula>if(isCompleted__c,
60*24*(NULLVALUE(LastModDT__c, Now())-CreatedAt__c),
60*24*( Now()-CreatedAt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLAMinutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSN_TIN__c</fullName>
        <label>SSN/TIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript__c</fullName>
        <label>Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCompleted</label>
        <type>Checkbox</type>
    </fields>
    <label>HRB Refund Advance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Add_to_f9list_id__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>First_Name__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>City__c</columns>
        <columns>Client_Preferred_Phone__c</columns>
        <columns>CreatedAt__c</columns>
        <columns>Date_Processed__c</columns>
        <columns>Processed_Date_Time__c</columns>
        <columns>Refund_Advance_Application_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AutoAfternoon</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>LastModDT__c</columns>
        <columns>SLAMinutes__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ManualDecision__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/17/2018 1:00 PM</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <label>AutoAfternoon</label>
    </listViews>
    <listViews>
        <fullName>AutoToday</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedAt__c</columns>
        <columns>LastModDT__c</columns>
        <columns>SLAMinutes__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <label>AutoToday</label>
    </listViews>
    <listViews>
        <fullName>AutoYesterdays</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>LastModDT__c</columns>
        <columns>SLAMinutes__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>isCompleted__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <label>AutoYesterdays</label>
    </listViews>
    <listViews>
        <fullName>InProcess</fullName>
        <booleanFilter>(1 OR 2 ) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedAt__c</columns>
        <columns>LastModDT__c</columns>
        <columns>SLAHours__c</columns>
        <columns>SLAMinutes__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>Transcript__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>isCompleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>MANUAL</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>HRBDecision__c</field>
            <operation>equals</operation>
        </filters>
        <label>InProcess</label>
        <sharedTo>
            <group>Bradley_Greer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InQUEUE</fullName>
        <booleanFilter>(1 OR 2 ) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedAt__c</columns>
        <columns>LastModDT__c</columns>
        <columns>SLAHours__c</columns>
        <columns>SLAMinutes__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>Transcript__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>isCompleted__c</columns>
        <columns>HRBDecision__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>MANUAL</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>startsWith</operation>
            <value>HRB Q</value>
        </filters>
        <label>InQueue</label>
        <sharedTo>
            <group>Bradley_Greer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LastHour</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>SLAMinutes__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>isCompleted__c</columns>
        <columns>SLAHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2018 6:00 PM</value>
        </filters>
        <label>LastHour</label>
    </listViews>
    <listViews>
        <fullName>OutOfQueue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedAt__c</columns>
        <columns>LastModDT__c</columns>
        <columns>SLAHours__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DecisionBy__c</field>
            <operation>notEqual</operation>
            <value>MANUAL</value>
        </filters>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>HRBDecision__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>notEqual</operation>
            <value>AUTO</value>
        </filters>
        <label>OutOfQueue</label>
        <sharedTo>
            <group>Bradley_Greer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodayAndYesterdays</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>Score__c</columns>
        <columns>isCompleted__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>SLAHours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>TodayAndYesterdays</label>
    </listViews>
    <listViews>
        <fullName>Todays</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedAt__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Score__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>IRS_Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays</label>
    </listViews>
    <listViews>
        <fullName>TodaysAutoAPD</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <filters>
            <field>AutoDecision__c</field>
            <operation>equals</operation>
            <value>APD</value>
        </filters>
        <label>TodaysAutoAPD</label>
    </listViews>
    <listViews>
        <fullName>TodaysAutoDCL</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>NUM_SCORE__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <filters>
            <field>AutoDecision__c</field>
            <operation>equals</operation>
            <value>DCL</value>
        </filters>
        <label>TodaysAutoDCL</label>
    </listViews>
    <listViews>
        <fullName>Yesterdays</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>Score__c</columns>
        <columns>isCompleted__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>IRS_Phone_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterdays</label>
    </listViews>
    <listViews>
        <fullName>YesterdaysAutoAPD</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>ManualDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>Score__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <filters>
            <field>AutoDecision__c</field>
            <operation>equals</operation>
            <value>APD</value>
        </filters>
        <label>YesterdaysAutoAPD</label>
    </listViews>
    <listViews>
        <fullName>YesterdaysAutoDCL</fullName>
        <columns>NAME</columns>
        <columns>CreatedAt__c</columns>
        <columns>DecisionBy__c</columns>
        <columns>AutoDecision__c</columns>
        <columns>HRBDecision__c</columns>
        <columns>Score__c</columns>
        <columns>isCompleted__c</columns>
        <columns>Transcript__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedAt__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>DecisionBy__c</field>
            <operation>equals</operation>
            <value>AUTO</value>
        </filters>
        <filters>
            <field>AutoDecision__c</field>
            <operation>equals</operation>
            <value>DCL</value>
        </filters>
        <label>YesterdaysAutoDCL</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HRB Refund Advance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>